--- a/layout/holy_grail_layout/holy_grail_layout.html
+++ b/layout/holy_grail_layout/holy_grail_layout.html
@@ -84,7 +84,7 @@
             我是一个固定 200px 宽度的右边栏。 我是一个固定 200px 宽度的右边栏。 我是一个固定 200px 宽度的右边栏。 我是一个固定 200px 宽度的右边栏。 我是一个固定 200px 宽度的右边栏。
         </div>
     </div>
-    <div class="footer">圣杯布局原文链接：<a href="https://alistapart.com/article/holygrail">In Search of the Holy Grail</a></div>
+    <div class="footer">参考文章：<a href="https://alistapart.com/article/holygrail">In Search of the Holy Grail</a></div>
 </body>
 
 </html>
