--- a/layout/holy_grail_layout/holy_grail_layout.html
+++ b/layout/holy_grail_layout/holy_grail_layout.html
@@ -3,9 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
     <meta name="author" content="Roojay">
-    <meta name="description" content="css layout">
+    <meta name="description" content="css layout,holy grail layout">
     <title>圣杯布局</title>
     <style type="text/css">
         body {
